Fixed portfolio alignment issues for most common resolutions

--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -70,7 +70,16 @@
       padding: 0;
       background: $brand-colour-dark;
       background-image: url('/images/textures/t-square.png');
-      .portfolio-content { position: absolute; }
+      
+      // General content structure
+      .portfolio-content {
+        z-index: 2;
+        position: absolute;
+        .portfolio-text, .portfolio-img {
+          width: 100%;
+          position: absolute;
+        }
+      }
       
       // First introduction slide
       &:first-child {
@@ -80,43 +89,44 @@
         }
         
         .portfolio-text {
-          width: 100%;
           height: 40%;
-          position: absolute;
           top: 20%;
           @include parallax-transform(0.3);
           @include transform-origin(50% 40%);
         }
         
         .portfolio-img {
-          width: 100%;
           height: 50%;
           top: 50%;
           position: absolute;
           @include parallax-transform(0.4);
-          @include transform-origin(50% 0%);
+          @include transform-origin(50% 0);
         }
       }
       
       // Remaining slides
       &:not(:first-child) {
         .portfolio-img {
-          @include parallax-transform(0.2);
-          @include transform-origin(50% 75%);
-          height: auto;
-          max-height: 500px;
+          z-index: 3;
+          top: 0;
+          height: 40%;
           border-top: 3px solid $brand-colour;
+          @include parallax-transform(0.2);
+          @include transform-origin(50% 125%);
         }
         
         .portfolio-text {
-          @include parallax-transform(0.4);
-          @include transform-origin(50% 0%);
+          z-index: 4;
+          height: 55%;
+          top: 45%;
           background-color: #fff;
           border-top: 3px solid $brand-colour;
           @include border-radius(9px 9px 0 0);
           background: #fff;
           &:hover { border-top: 3px solid $hover-colour; }
           @include transition(border 1s);
+          @include parallax-transform(0.4);
+          @include transform-origin(50% 10%);
         }
       }
       
